Fix button contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ header a:hover {
 	padding: 8px;
 	border-radius: 6px;
 	background-color: rgba(150,150,200,0.15);
-	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1.1);
 }
 
 button {
@@ -79,7 +79,7 @@ button {
 	background-color: var(--text);
 	color: white;
 	outline: none;
-	transition: all 0.2s cubic-bezier(.25,.8,.25,1);
+	transition: all 0.2s cubic-bezier(.25,.8,.25,1.3);
 	font-weight: 500;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12);
 	line-height: 100%;
@@ -88,10 +88,11 @@ button {
 }
 
 button.outlined {
-	border-width: 2px;
+	border: solid;
+	border-color: rgba(255,255,255,0.25);
+	border-width: 1px;
 	background-color: black;
 	color: white;
-	border-color: var(--text);
 	outline: none;
 	box-shadow: none;
 }
